--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,6 +12,13 @@
   position: relative;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+
 .description {
   display: inherit;
   justify-content: inherit;
